server.log
nohup: ignoring input
 * Serving Flask app 'app'
 * Debug mode: on
WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.
 * Running on http://127.0.0.1:5000
Press CTRL+C to quit
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 124-614-488
127.0.0.1 - - [03/Dec/2025 22:31:58] "GET / HTTP/1.1" 200 -
127.0.0.1 - - [03/Dec/2025 22:31:59] "GET /static/style.css HTTP/1.1" 304 -
127.0.0.1 - - [03/Dec/2025 22:32:18] "POST /api/chat HTTP/1.1" 200 -
127.0.0.1 - - [03/Dec/2025 22:33:12] "POST /api/chat HTTP/1.1" 200 -
The attention mask is not set and cannot be inferred from input because pad token is same as eos token. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.
127.0.0.1 - - [03/Dec/2025 22:33:25] "POST /api/chat HTTP/1.1" 200 -
 * Detected change in '/workspaces/AGI-/agi/agent_pro.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 124-614-488
 * Detected change in '/workspaces/AGI-/agi/agent_pro.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 124-614-488
 * Detected change in '/workspaces/AGI-/app.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 124-614-488
 * Detected change in '/workspaces/AGI-/agi/agent_pro.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 124-614-488
The attention mask is not set and cannot be inferred from input because pad token is same as eos token. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.
127.0.0.1 - - [03/Dec/2025 22:45:59] "POST /api/chat HTTP/1.1" 200 -
127.0.0.1 - - [03/Dec/2025 22:49:28] "POST /api/chat HTTP/1.1" 200 -
127.0.0.1 - - [03/Dec/2025 22:49:46] "POST /api/chat HTTP/1.1" 200 -
127.0.0.1 - - [03/Dec/2025 22:50:14] "POST /api/chat HTTP/1.1" 200 -
 * Detected change in '/workspaces/AGI-/agi/world_model_nn.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 124-614-488
 * Detected change in '/workspaces/AGI-/agi/planner_mcts.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 124-614-488
 * Detected change in '/workspaces/AGI-/scripts/collect_transitions.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 124-614-488
The attention mask is not set and cannot be inferred from input because pad token is same as eos token. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.
127.0.0.1 - - [03/Dec/2025 23:01:58] "POST /api/chat HTTP/1.1" 200 -
127.0.0.1 - - [03/Dec/2025 23:02:17] "POST /api/chat HTTP/1.1" 200 -
127.0.0.1 - - [03/Dec/2025 23:02:39] "POST /api/chat HTTP/1.1" 200 -
 * Detected change in '/workspaces/AGI-/agi/world_model.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 124-614-488
 * Detected change in '/workspaces/AGI-/agi/world_model.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 124-614-488
 * Detected change in '/workspaces/AGI-/agi/replay_buffer.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 124-614-488
 * Detected change in '/workspaces/AGI-/agi/planner_mcts.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 124-614-488
 * Detected change in '/workspaces/AGI-/train_world_model.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 124-614-488
 * Detected change in '/workspaces/AGI-/scripts/collect_transitions.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 124-614-488
 * Detected change in '/workspaces/AGI-/tests/test_world_model.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 124-614-488
The attention mask is not set and cannot be inferred from input because pad token is same as eos token. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.
127.0.0.1 - - [03/Dec/2025 23:23:44] "POST /api/chat HTTP/1.1" 200 -
 * Detected change in '/workspaces/AGI-/main.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 124-614-488
 * Detected change in '/workspaces/AGI-/app.py', reloading
 * Restarting with stat
  File "/workspaces/AGI-/app.py", line 127
    @app.route('/status')
    ^
SyntaxError: expected 'except' or 'finally' block
